--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": ["react-app", "react-app/jest"],
   "rules": {
     "no-unused-vars": "warn",
-    "no-console": "off"
+    "no-console": "off",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
 
