CI: Set CI=false to prevent treating ESLint warnings as errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,10 +121,11 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: |
-          CI=true npm run build
+          npm run build
         env:
           REACT_APP_API_URL: http://localhost:8080
           GENERATE_SOURCEMAP: false
+          CI: false
         continue-on-error: false
 
   lint:
