--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,10 +121,11 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: |
-          npm run build:ci || DISABLE_ESLINT_PLUGIN=true npm run build
+          DISABLE_ESLINT_PLUGIN=true npm run build
         env:
           REACT_APP_API_URL: http://localhost:8080
           GENERATE_SOURCEMAP: false
+          CI: "false"
         continue-on-error: false
 
   lint:
