--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,12 +121,13 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: |
-          unset CI
-          DISABLE_ESLINT_PLUGIN=true npm run build
+          npm run build:ci
         env:
           REACT_APP_API_URL: http://localhost:8080
           GENERATE_SOURCEMAP: false
+          SKIP_PREFLIGHT_CHECK: "true"
           DISABLE_ESLINT_PLUGIN: "true"
+          CI: "false"
         continue-on-error: false
 
   lint:
