--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,13 +121,12 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: |
-          npm run build:ci
+          echo "DISABLE_ESLINT_PLUGIN=true" >> .env
+          echo "SKIP_PREFLIGHT_CHECK=true" >> .env
+          CI=false npm run build
         env:
           REACT_APP_API_URL: http://localhost:8080
           GENERATE_SOURCEMAP: false
-          SKIP_PREFLIGHT_CHECK: "true"
-          DISABLE_ESLINT_PLUGIN: "true"
-          CI: "false"
         continue-on-error: false
 
   lint:
